--- a/UI/angular/src/app/admin/home/home.component.html
+++ b/UI/angular/src/app/admin/home/home.component.html
@@ -1,13 +1,9 @@
-
-<div class="mx-0">
+ <div class="header">
     <app-navbar></app-navbar>
-</div>
-<div class="row">
-    <div class="col-1">
-        <app-sidebar></app-sidebar>
+  </div>
+  <div class="container">
+    <app-sidebar></app-sidebar>
+     <div class="content">
+      <router-outlet></router-outlet>
     </div>
-    <div class="col">
-        <router-outlet></router-outlet>
-    </div>
-</div>
- 
+  </div>
