--- a/UI/angular/src/app/admin/Components/home/home.component.css
+++ b/UI/angular/src/app/admin/Components/home/home.component.css
@@ -13,7 +13,9 @@
     margin:0;
     padding: 0;
   }
-  
+  app-navbar{
+    background-color: #00246B;
+  }
   app-sidebar {
     width: 200px;
     position: fixed;
