--- a/UI/angular/src/app/common/navbar/navbar.component.html
+++ b/UI/angular/src/app/common/navbar/navbar.component.html
@@ -19,11 +19,11 @@
     </div>
 </div>
 </nav> -->
-<div class="container-fluid mx-0">
+<div class="container-fluid m-0 p-0">
 <nav
-  class="navbar navbar-expand-lg navbar-dark  bg-dark mx-0"
+  class="navbar navbar-expand-lg nav-p mx-0"
 >
-  <a class="navbar-brand" href="#">Ecommerce_APR</a>
+  <a class="navbar-brand nav-i" href="#">Ecommerce_APR</a>
   <button
     class="navbar-toggler d-lg-none"
     type="button"
@@ -35,38 +35,15 @@
   ></button>
   <div class="collapse navbar-collapse" id="collapsibleNavId">
     <ul class="navbar-nav me-auto mt-2 mt-lg-0">
-      <li class="nav-item">
-        <a class="nav-link active" href="#" aria-current="page"
+      <li class="nav-item nav-i">
+        <!-- <a class="nav-link active " href="#" aria-current="page"
           >Home <span class="visually-hidden">(current)</span></a
-        >
+        > -->
       </li>
        
-      <!-- <li class="nav-item dropdown">
-        <a
-          class="nav-link dropdown-toggle"
-          href="#"
-          id="dropdownId"
-          data-bs-toggle="dropdown"
-          aria-haspopup="true"
-          aria-expanded="false"
-          >Dropdown</a
-        > -->
-        <!-- <div class="dropdown-menu" aria-labelledby="dropdownId">
-          <a class="dropdown-item" href="#">Action 1</a>
-          <a class="dropdown-item" href="#">Action 2</a>
-        </div>
-      </li> -->
+      
     </ul>
-    <!-- <form class="d-flex my-2 my-lg-0">
-      <input
-        class="form-control me-sm-2"
-        type="text"
-        placeholder="Search"
-      />
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
-        Search
-      </button>
-    </form> -->
+    
   </div>
 </nav>
 
