--- a/UI/angular/src/app/common/sidebar/sidebar.component.css
+++ b/UI/angular/src/app/common/sidebar/sidebar.component.css
@@ -1,21 +1,35 @@
 #navbar-example3 {
     width: 250px; /* Adjust width as needed */
-    height: 100vh; /* Full height */
-    background-color: #fdfdfd; /* Background color */
+    height: 100vh; 
+    color: white;/* Full height */
+    background-color: #B1D4E0;
+    /* background-color:#A7BEAE; */
     border-right: 1px solid #ddd; /* Border color */
 }
 
 .sidebar-item {
-    list-style: none;
+  margin-top: 5px;
+  display: flex;
+   /* justify-content: center; */
+  /* background-color:   #00246B; */
+  background-color:   #0C2D48;
+}
+.sidebar-item:hover{
+    background-color:#145DA0;
 }
 
 .nav-link {
     display: flex;
     align-items: center;
     padding: 10px;
+    text-align: center;
+    font-size: 20px;
     text-decoration: none;
-    color: #333;
+    color: white;
+    margin-left: 20px;
+    
 }
+ 
 
 .nav-link.active {
     background-color: #007bff;
