front_end changes ad

--- a/UI/angular/src/app/admin/Components/product/product.component.html
+++ b/UI/angular/src/app/admin/Components/product/product.component.html
@@ -5,17 +5,17 @@
 
        </p-button></div>
    <!-------------- popup --------------------->
-   <p-dialog header="Add Vendor" [modal]="true" [(visible)]="visible"
+   <p-dialog header="Add Product" [modal]="true" [(visible)]="visible"
        [style]="{ width: '50rem', height: '30rem'}" >
        <div class="grid p-fluid ms-4">
            <form #productForm="ngForm" (ngSubmit)="addProduct(productForm)" novalidate>
                <div class="row">
                    <div class="col-6">
                        <label for="ProductName">ProductName</label><br>
-                       <input type="text" id="ProductName" #ProductName="ngModel" name="ProductName" ngModel  
+                       <input type="text" id="ProductName" #productName="ngModel" name="productName" ngModel  
                            style="min-width: 350px; min-height: 40px;" placeholder="Enter Name" required
                            pattern="[a-zA-Z ]+">
-                       <div *ngIf="ProductName.invalid && ProductName.touched" class="text-danger">
+                       <div *ngIf="productName.invalid && productName.touched" class="text-danger">
                            <small>Name is required and must contain only letters.</small>
                        </div>
                    </div>
@@ -23,9 +23,9 @@
 
                    <div class="col-6">
                        <label for="ProductDescription">Product Description</label><br>
-                       <input type="text" id="ProductDescription" #ProductDescription="ngModel" name="ProductDescription" ngModel 
+                       <input type="text" id="ProductDescription" #productDescription="ngModel" name="productDescription" ngModel 
                            style="min-width: 350px; min-height: 40px;" placeholder="ProductDescription" >
-                       <div *ngIf="ProductDescription.invalid && ProductDescription.touched" class="text-danger">
+                       <div *ngIf="productDescription.invalid && productDescription.touched" class="text-danger">
                            <small>Number must be 10 digits long and contain only numbers.</small>
                        </div>
                    </div>
@@ -34,25 +34,53 @@
                <div class="row mt-3">
                    <div class="col-6">
                        <label for="UnitPrice">UnitPrice</label><br>
-                       <input type="text" id="UnitPrice" #UnitPrice="ngModel" name="UnitPrice" ngModel 
+                       <input type="text" id="UnitPrice" #unitPrice="ngModel" name="unitPrice" ngModel 
                            style="min-width: 350px; min-height: 40px;" placeholder="Enter Unit price" required>
-                       <div *ngIf="UnitPrice.invalid && UnitPrice.touched" class="text-danger">
+                       <div *ngIf="unitPrice.invalid && unitPrice.touched" class="text-danger">
                            <small>Email is required and must be correct</small>
                        </div>
                    </div>
 
 
                    <div class="col-6">
-                    <label for="Categories">Categories</label><br>
+                    <label for="selectedCategory">Categories</label><br>
                     <p-dropdown [options]="Categories"  optionLabel="categoryName" 
-                        name="Category" [(ngModel)]="category" placeholder="{{ 'Category'}}">
+                        name="selectedCategory" [(ngModel)]="selectedCategory" placeholder="{{'Category'}}">
                     </p-dropdown>
                    </div>
                    
                </div>
+               <div class="row mt-3">
+                 <div class="col-3">
+                 <label for="Colors">Color</label><br>
+                 <p-dropdown [options]="Colors"  optionLabel="colorName" 
+                     name="selectedColor" [(ngModel)]="selectedColor" placeholder="{{ 'Color'}}">
+                 </p-dropdown>
+                </div>
+                <div class="col-3">
+                    <label for="Rams">RAM</label><br>
+                    <p-dropdown [options]="Rams"  optionLabel="ramValue" 
+                        name="selectedRam" [(ngModel)]="selectedRam" placeholder="{{ 'RAM'}}">
+                    </p-dropdown>
+                </div>
+                <div class="col-3">
+                    <label for="Roms">ROM</label><br>
+                    <p-dropdown [options]="Roms"  optionLabel="romValue" 
+                        name="selectedRom" [(ngModel)]="selectedRom" placeholder="{{ 'ROM'}}">
+                    </p-dropdown>
+                </div>
+                <div class="col-3">
+                    <label for="Processors">Processors</label><br>
+                    <p-dropdown [options]="Processors"  optionLabel="processorValue" 
+                        name="selectedProcessor" [(ngModel)]="selectedProcessor" placeholder="{{ 'Processor'}}">
+                    </p-dropdown>
+                </div>
+                
+                
+            </div>
                <div class="row mt-3" style="width: 150px;margin-left: 100px;margin-top: 200px;">
                    <p-button label="Save" type="submit" [disabled]="productForm.invalid" ></p-button>
                </div>
            </form>
        </div>
-   </p-dialog> x    
+   </p-dialog> 
